updated front page logo, fixed dark mode code reload bug

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -73,7 +73,7 @@ body {
     }
     
     a {
-        color: #dfedff;
+        color: #bb5273;
     }
     
     p > a {
@@ -133,31 +133,42 @@ p > a {
 /* Nav-Bar */
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     align-content: center;
     flex-wrap: wrap;
-    margin: 10px auto;
-    padding: 0 2.5em;
+    margin: 1.5rem .5rem 1.5rem  3rem;
+    padding: 0;
     height: 100%;
     
 }
 
+
+
 @media screen and (max-width: 800px) {
     .header {
       max-width: 70em;
-      margin: 10px auto;
+      margin: 1rem auto;
       padding: 0 1.5em;
       overflow: hidden;
+      justify-content: start;
+    }
+
+    .navbar ul li:first-child {
+        padding-left: 0;
     }
 }
 
-.v8-logo {
-    width: 20%;
+@media screen and (max-width:600px) {
+    .navbar ul li:first-child {
+        padding-left: 0;
+        margin-left: 0;
+    }
 }
 
+
+
 .navbar {
-    top: 0;
     display: flex;
     justify-content: center;
 }
@@ -174,8 +185,8 @@ p > a {
     margin: 0 1rem;
 }
 
-.navbar ul li:first-child {
-    padding-left: 0;
+.navbar ul li:last-child {
+    margin-right: 1.5rem;
 }
 
 .navbar ul li a {
@@ -185,7 +196,7 @@ p > a {
 }
 
 .toggle-box {
-    width: 20%;
+    margin-right: 1rem;
 }
 
 #theme-toggle {
@@ -201,7 +212,7 @@ p > a {
 }
 
 .dark-mode ul li a {
-    color: #dfedff;
+    color: #656666;
 }
 
 ion-icon {
@@ -210,7 +221,7 @@ ion-icon {
 
 /* Title Bar For Each Page */
 .title {
-    margin: .5rem;
+    margin: .6rem;
 }
 
 /* Flashbar */
@@ -234,13 +245,10 @@ ion-icon {
 
 }
 
- .intro-container strong {
-    text-decoration-line: underline;
-}
+
 
 .dark-mode .intro-container strong {
-    color: #17614a;
-    text-decoration-line: underline;
+    color: #656666;
 }
 
 
@@ -269,6 +277,17 @@ ion-icon {
 }
 
 
+.loop-image-box {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-around;
+    /* overflow: hidden; */
+}
+
+.loop-image{
+    width: 100%;
+}
 
 .wordle-example-pic {
     text-align: center;
@@ -358,7 +377,7 @@ input[type=submit] {
 .solver-info-container {
     display: flex;
     justify-content: space-around;
-    margin: 1.5rem;
+    margin: 1rem;
     align-items: start;
     width: 100%;
 }
@@ -371,6 +390,9 @@ input[type=submit] {
     font-size: 40px;
 }
 
+.solver-stats-table-container {
+    margin: 1rem;
+}
 
 /* Solver Games Tables */
 .games-table-title-bar {
